Fixes wrapping of pagination on various screen sizes.

--- a/alert/assets/static-global/css/override.css
+++ b/alert/assets/static-global/css/override.css
@@ -245,6 +245,13 @@ div.hopscotch-bubble .hopscotch-bubble-close {
     color: gray;
 }
 
+.no-underline,
+.no-underline:hover,
+.no-underline:active,
+.no-underline:focus {
+    text-decoration: none;
+}
+
 .gray, .grey {
     color: gray;
 }
